<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity" >

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp" >
    </android.support.v4.view.ViewPager>

    <Button
        android:id="@+id/playPauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/play" />

    <TextView
        android:id="@+id/track_title"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/volumeControl"
        android:layout_alignLeft="@id/volumeControl"
        android:layout_alignRight="@id/volumeControl"
        android:layout_marginBottom="10dp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:freezesText="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/track_title_initial"
        android:textColor="@android:color/background_light" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="139dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo_small" />

    <ImageView
        android:id="@+id/progressImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/progress_circle" />

    <Button
        android:id="@+id/button_32kb"
        android:layout_width="73dp"
        android:layout_height="26dp"
        android:layout_alignLeft="@id/logoImageView"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/small_button"
        android:text="@string/button_32kb"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button_128kb"
        android:layout_width="73dp"
        android:layout_height="26dp"
        android:layout_above="@id/button_32kb"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/small_button"
        android:text="@string/button_128kb"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/speakerLow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/button_32kb"
        android:src="@drawable/speaker_low" />

    <SeekBar
        android:id="@+id/volumeControl"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/speakerLow"
        android:adjustViewBounds="true"
        android:indeterminate="false"
        android:max="100"
        android:maxHeight="11dip"
        android:minHeight="11dp"
        android:mirrorForRtl="false"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:progress="50"
        android:progressDrawable="@drawable/styled_progress"
        android:thumb="@drawable/thumb" />

    <ImageView
        android:id="@+id/speakerHigh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="23dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/volumeControl"
        android:src="@drawable/speaker_high" />

    <Button
        android:id="@+id/shareButton"
        android:layout_width="73dp"
        android:layout_height="26dp"
        android:layout_alignRight="@+id/speakerHigh"
        android:layout_marginTop="60dp"
        android:background="@drawable/small_button"
        android:gravity="center"
        android:text="@string/button_share"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <ImageButton
        android:id="@+id/onAirButton"
        android:layout_width="73dp"
        android:layout_height="26dp"
        android:layout_alignLeft="@+id/shareButton"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/small_button"
        android:src="@drawable/playlist_icon" />

    <Button
        android:id="@+id/btnChangeRadio"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/playPauseButton"
        android:layout_alignLeft="@+id/logoImageView"
        android:text="Button"
        android:visibility="invisible" />

</RelativeLayout>